# attendance-app-with-facial-recognition

./: .gitignore
backend/: app.py  requirements.txt
backend/cpp/: CMakeLists.txt  arcface_engine.cpp  arcface_engine.h  cosine_engine.cpp  face_engine.cpp  vector_match.cpp
backend/models/: Admin.py  Approver.py  Attendance.py  AuditLog.py  EmployeeGroup.py  Holiday.py  PaidHoliday.py  Shift.py  ShiftGroup.py  User.py  WorkApplication.py
backend/routes/: admin.py  approvers.py  attendance.py  holiday.py  hr_logs.py  logs.py  paid_holidays.py  shift_group.py  shifts.py  users.py  work_applications.py
backend/utils/: db.py  db_init_safe.py  security.py
frontend/: config-overrides.js  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: AboutUs.js  AdminDashboard.js  AdminLogin.js  App.js  AttendanceLogs.js  CalendarView.js  ChangePassword.js  DevCon.js  FaceTracker.js  Footer.js  GroupsManagement.js  HeaderDateTime.js  HolidayManagement.js  Home.js  HrPortal.js  LogsReports.js  ManageAdmin.js  ManageUsers.js  MyApprovals.js  MyAttendance.js  PaidHolidays.js  PrivacyPolicy.js  RegisterUser.js  ShiftsManagement.js  TermsAndConditions.js  Toast.js  WorkApplication.js  WorkApplicationLogin.js  WorkApplicationRequests.js  YourApplications.js  config.js  index.css
frontend/src/hooks/: cosineMatcher.js  globalDetector.js  simulateMatcherTest.js  useEmbeddingsCache.js
loadtests/: WindowsHello_vs_FaceTrack.xlsx  hr_logs_test.js  load-test.js  make_report.py  package-lock.json  package.json  results.json
